# ReCreation1.5

./: .gitattributes  backend_test.py  backend_test_authentic.py  building_system_test.py  comprehensive_building_test.py  pyproject.toml  replit.md  start.sh  test_result.md  tick_system_test.py
backend/: app_config.py  database.py  indexes.py  requirements.txt  security.py  server.py
backend/services/: spaceport.py
frontend/src/: App.css  App.js
frontend/src/components/: AdminPanel.js  LoginPage.js  ProtectedRoute.js
frontend/src/components/game/: GameInterface.js  Observatory.js  ShipDesignCalculator.js
frontend/src/context/: AuthContext.js
frontend/src/lib/: api.js
