[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi==0.110.1",
    "motor==3.3.1",
    "passlib>=1.7.4",
    "pydantic>=2.13.1",
    "pyjwt>=2.12.1",
    "pymongo==4.5.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "uvicorn==0.25.0",
]
